# AI-Powered-Mall-Navigator-Crew1

./: README.md  pyproject.toml
knowledge/map-json/: ocr_5250.json
src/easyocr/: crew.py  main.py
src/easyocr/config/: agents.yaml  tasks.yaml
src/easyocr/tools/: custom_tool.py
