[project]
name = "easyocr"
version = "0.1.0"
description = "EASYOCR using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
easyocr = "easyocr.main:run"
run_crew = "easyocr.main:run"
train = "easyocr.main:train"
replay = "easyocr.main:replay"
test = "easyocr.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
